--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "yarn build && gh-pages -d dist"
+    "deploy": "yarn build && gh-pages -d dist && echo \"Deployed to Github Pages!\" "
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
