--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "deploy": "yarn build && gh-pages -d dist && echo \"Deployed to Github Pages!\" "
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.13",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
