--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "yarn build && gh-pages -d dist && echo \"Deployed to Github Pages!\" "
+    "deploy": "yarn build && gh-pages -d dist && echo \"Static site generated, commit changes.\""
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.13",
